--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>seller-retail-reports</description>
 	<properties>
 		<java.version>17</java.version>
+		<mongodb.version>3.12.14</mongodb.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -34,16 +35,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>${mongodb.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
