--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>seller-retail-reports</description>
 	<properties>
 		<java.version>17</java.version>
-		<mongodb.version>3.12.14</mongodb.version>
+<!--		<mongodb.version>3.12.14</mongodb.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -35,11 +35,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>${mongodb.version}</version>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
