--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ server.port=8081
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.password=password
+spring.data.mongodb.password=${MANGODB_PASSWORD}
 spring.data.mongodb.database=report_db
+
+jwt.expiration=${JWT_EXPIRATION}
+jwt.secret=${JWT_SECRET}
