--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,10 @@
 			<artifactId>lombok-mapstruct-binding</artifactId>
 			<version>${lombok.mapstruct.binding.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
