--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.password=${MANGODB_PASSWORD}
 spring.data.mongodb.database=report_db
+caching.spring.TTL=420000
 
 jwt.expiration=${JWT_EXPIRATION}
 jwt.secret=${JWT_SECRET}
